--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "postinstall": "patch-package"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.13.7",
-    "@strapi/plugin-users-permissions": "4.13.7",
+    "@ckeditor/strapi-plugin-ckeditor": "^0.0.9",
+    "@strapi/plugin-graphql": "^4.13.7",
     "@strapi/plugin-i18n": "4.13.7",
-    "mysql": "2.18.1"
+    "@strapi/plugin-users-permissions": "4.13.7",
+    "@strapi/strapi": "4.13.7",
+    "mysql": "2.18.1",
+    "patch-package": "^8.0.0"
   },
   "author": {
     "name": "A Strapi developer"
@@ -26,5 +29,9 @@
     "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jsdom": "^22.1.0",
+    "slugify": "^1.6.6"
+  }
 }
