--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
+        with:
+          version: 8.x
 
       - name: Setup Node
         uses: actions/setup-node@v3
