--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,22 +2,11 @@ name: ci
 on: [pull_request]
 
 jobs:
-  install:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8.x
-
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8.x
 
       - name: Setup Node
         uses: actions/setup-node@v3
@@ -25,13 +14,7 @@ jobs:
           node-version: 18.x
 
       - name: Install dependencies
-        run: pnpm install
-
-      - name: Linting
-        run: pnpm run lint
-
-      - name: Testing
-        run: pnpm run test
+        run: npm install
 
       - name: Build
-        run: pnpm run build
+        run: npm run build
