--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@strapi/plugin-users-permissions": "4.17.0",
     "@strapi/strapi": "4.17.0",
     "mysql": "2.18.1",
-    "patch-package": "^8.0.0"
+    "patch-package": "^8.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
+    "styled-components": "^5.3.11"
   },
   "author": {
     "name": "A Strapi developer"
