--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/jsdom": "^21.1.6",
     "jsdom": "^24.0.0",
     "slugify": "^1.6.6"
   }
