--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@ckeditor/strapi-plugin-ckeditor": "^0.0.10",
     "@strapi/plugin-graphql": "^4.20.1",
     "@strapi/plugin-i18n": "4.20.1",
     "@strapi/plugin-users-permissions": "4.20.1",
     "@strapi/strapi": "4.20.1",
+    "graphql": "^16.8.1",
     "mysql": "2.18.1",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
