--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wongames_api",
+  "name": "wongames-api",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -11,28 +11,27 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.5",
     "@ckeditor/strapi-plugin-ckeditor": "^0.0.10",
+    "@strapi/plugin-cloud": "4.20.2",
     "@strapi/plugin-graphql": "^4.20.2",
     "@strapi/plugin-i18n": "4.20.2",
     "@strapi/plugin-users-permissions": "4.20.2",
     "@strapi/strapi": "4.20.2",
-    "graphql": "^16.8.1",
     "mysql": "2.18.1",
     "patch-package": "^8.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.4",
-    "styled-components": "^5.3.11"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "styled-components": "5.3.3"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "749ef266-1e2a-48df-a84f-b3be9618945e"
+    "uuid": "cc9c4b45-222a-496b-ad26-9424059fbafb"
   },
   "engines": {
-    "node": ">=16.0.0 <=20.x.x",
+    "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT",
