--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": "1.7",
+    "version": 2,
     "builds": [
         {
             "src": "src/index.ts",
@@ -8,7 +8,7 @@
     ],
     "routes": [
         {
-            "src": "/.*",
+            "src": "(.*)",
             "dest": "src/index.ts"
         }
     ]
