--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@strapi/plugin-i18n": "4.20.3",
     "@strapi/plugin-users-permissions": "4.20.3",
     "@strapi/strapi": "4.20.3",
+    "@types/jsdom": "^21.1.6",
+    "jsdom": "^24.0.0",
     "mysql": "^2.18.1",
     "patch-package": "^8.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "slugify": "^1.6.6",
     "styled-components": "5.3.3"
   },
   "author": {
@@ -35,9 +38,5 @@
     "npm": ">=6.0.0"
   },
   "license": "MIT",
-  "devDependencies": {
-    "@types/jsdom": "^21.1.6",
-    "jsdom": "^24.0.0",
-    "slugify": "^1.6.6"
-  }
+  "devDependencies": {}
 }
