--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@ckeditor/strapi-plugin-ckeditor": "^0.0.11",
-    "@strapi/plugin-cloud": "4.21.0",
-    "@strapi/plugin-graphql": "^4.21.0",
-    "@strapi/plugin-i18n": "4.21.0",
-    "@strapi/plugin-users-permissions": "4.21.0",
-    "@strapi/strapi": "4.21.0",
+    "@strapi/plugin-cloud": "4.21.1",
+    "@strapi/plugin-graphql": "4.21.1",
+    "@strapi/plugin-i18n": "4.21.1",
+    "@strapi/plugin-users-permissions": "4.21.1",
+    "@strapi/strapi": "4.21.1",
     "@types/jsdom": "^21.1.6",
     "jsdom": "^24.0.0",
     "mysql": "^2.18.1",
