--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wongames-api",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A Strapi application",
   "scripts": {
     "dev": "strapi develop",
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@ckeditor/strapi-plugin-ckeditor": "^0.0.11",
-    "@strapi/plugin-cloud": "4.21.1",
-    "@strapi/plugin-graphql": "4.21.1",
-    "@strapi/plugin-i18n": "4.21.1",
-    "@strapi/plugin-users-permissions": "4.21.1",
-    "@strapi/strapi": "4.21.1",
+    "@strapi/plugin-cloud": "4.23.0",
+    "@strapi/plugin-graphql": "4.23.0",
+    "@strapi/plugin-i18n": "4.23.0",
+    "@strapi/plugin-users-permissions": "4.23.0",
+    "@strapi/strapi": "^4.22.0",
     "@types/jsdom": "^21.1.6",
     "jsdom": "^24.0.0",
     "mysql": "^2.18.1",
@@ -28,7 +28,7 @@
     "styled-components": "5.3.3"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Pedro Estevão"
   },
   "strapi": {
     "uuid": "cc9c4b45-222a-496b-ad26-9424059fbafb"
@@ -37,6 +37,5 @@
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
-  "license": "MIT",
-  "devDependencies": {}
+  "license": "MIT"
 }
