--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,25 @@
+# Server
 HOST=0.0.0.0
 PORT=1337
+
+# Secrets
+APP_URL=tobemodified
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
+
+# GOG API
+GOG_URL=https://www.gog.com
+GOG_API_URL=https://catalog.gog.com/v1/catalog
+
+# Database
+DATABASE_CLIENT=postgres
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=tobemodified
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=tobemodified
+DATABASE_SSL=false
+DATABASE_FILENAME=
 JWT_SECRET=tobemodified
