Update .gitignore and Env example

--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,6 @@ coverage
 # Strapi
 ############################
 
-.env
 license.txt
 exports
 .strapi
@@ -129,3 +128,9 @@ dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+
+############################
+# local env files
+############################
+
+.env.*
