--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": "18.x", 
-    "npm": "9.x"
+    "node": ">=18.0.0 <=20.x.x",
+    "npm": ">=6.0.0"
   },
   "strapi": {
     "uuid": "5bb54f1a-2d16-4fea-a687-4624ad309655"
