--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "typescript": "^5.6.2"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "author": {
     "name": "Pedro Estevão"
