--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@strapi/plugin-cloud": "5.9.0",
 		"@strapi/plugin-graphql": "^5.9.0",
 		"@strapi/plugin-users-permissions": "5.9.0",
+		"@strapi/provider-email-nodemailer": "^5.10.2",
 		"@strapi/strapi": "5.9.0",
 		"jsdom": "^26.0.0",
 		"pg": "8.13.1",
@@ -21,6 +22,8 @@
 		"react-dom": "^18.0.0",
 		"react-router-dom": "^6.28.0",
 		"slugify": "^1.6.6",
+		"strapi-plugin-email-designer-5": "^0.0.7",
+		"stripe": "^17.6.0",
 		"styled-components": "^6.1.14"
 	},
 	"devDependencies": {
