--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@strapi/plugin-graphql": "^5.10.4",
 		"@strapi/plugin-users-permissions": "5.10.4",
 		"@strapi/provider-email-nodemailer": "^5.10.2",
+		"@strapi/provider-upload-cloudinary": "^5.21.0",
 		"@strapi/strapi": "5.10.4",
 		"jsdom": "^26.0.0",
 		"pg": "8.13.3",
